-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 21
-
Component/s: hotspot
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8313682 | 17.0.10-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
| JDK-8316366 | 17.0.10 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8313683 | 11.0.22-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
| JDK-8317881 | 11.0.22 | Andrew Lu | P4 | Resolved | Fixed | b01 |
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (workspace/open/src/hotspot/share/compiler/compilerOracle.cpp:1061), pid=1823394, tid=1823395
# Error: ShouldNotReachHere()
#
# JRE version: (21.0+25) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+25-LTS-2118, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xa2240e] CompilerOracle::parse_compile_only(char*)+0x71e
Stack: [0x00007f4a20a21000,0x00007f4a20b22000], sp=0x00007f4a20b202b0, free space=1020k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa2240e] CompilerOracle::parse_compile_only(char*)+0x71e (compilerOracle.cpp:1061)
V [libjvm.so+0xa2258f] compilerOracle_init()+0x10f
V [libjvm.so+0xe25a0a] init_globals()+0xaa
V [libjvm.so+0x17b0825] Threads::create_vm(JavaVMInitArgs*, bool*)+0x2c5
V [libjvm.so+0xf882b5] JNI_CreateJavaVM+0x75
C [libjli.so+0x3b0f] JavaMain+0x8f
C [libjli.so+0x79d9] ThreadJavaMain+0x9
The issue was fixed as a side effect of
CompileOnly: An error occurred during parsing
Line: ','
Error: Could not create the Java Virtual Machine.
Error: A fatal exception has occurred. Program will exit.
Since a backport of
- backported by
-
JDK-8313682 Failure during CompileOnly parsing leads to ShouldNotReachHere
-
- Resolved
-
-
JDK-8313683 Failure during CompileOnly parsing leads to ShouldNotReachHere
-
- Resolved
-
-
JDK-8316366 Failure during CompileOnly parsing leads to ShouldNotReachHere
-
- Resolved
-
-
JDK-8317881 Failure during CompileOnly parsing leads to ShouldNotReachHere
-
- Resolved
-
- relates to
-
JDK-8027711 Unify wildcarding syntax for CompileCommand and CompileOnly
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/8336e3e2
-
Commit
openjdk/jdk17u-dev/955dcb3b
-
Commit
openjdk/jdk21u/6f76b65a
-
Review
openjdk/jdk11u-dev/2169
-
Review
openjdk/jdk17u-dev/1735
-
Review
openjdk/jdk21u/19