8312573: Failure during CompileOnly parsing leads to ShouldNotReachHere

Reviewed-by: phh
Backport-of: 6f76b65ace50b2361221dddab120e91b057497c1